# Deus-Ex-Machina

./: .gitignore  Claude.md  LICENSE  README.md  pyproject.toml
config/: confidence_profiles.json
data/experimental/: element_names.json
data/molecules/: benzene.json  butadiene.json  cyclobutadiene.json  cyclohexane.json  cyclooctatetraene.json  cyclopropane.json  ethylene.json  hexatriene.json  naphthalene.json
docs/: phase2-feedback-loop-validation.md
docs/.obsidian/: workspace.json
docs/Claude-Reasoning/: 001-periodic-table-architecture.md  002-comprehensive-element-properties.md  003-element-generator-architecture.md  004-theory-vs-cache-architecture.md  005-implementation-decisions.md  006-phase1-results.md  007-confidence-scoring-architecture.md  008-bonding-rules-architecture.md  009-molecular-structure-architecture.md  010-additivity-violation-analysis-001.md  011-cycles-amplify-correlation.md  013-cyclobutadiene-source-verification.md  014-complete-dataset-source-verification.md  015-final-source-verification.md  016-feedback-loop-hypothesis-abstraction.yaml  017-ethylene-anomaly-investigation.md  018-hexatriene-naphthalene-verification.md  019-verification-complete-summary.md
docs/Claude-Reasoning/Old Claude.md Files/: Claude.md.2025-11-24
docs/Technical Report/: hierarchical_lut.aux  hierarchical_lut.out  hierarchical_lut.tex
src/core/: __init__.py  element.py
src/crystallization/: __init__.py  detector.py
src/level1/: __init__.py  bonding.py
src/theory/: __init__.py  confidence.py  generator.py  quantum.py
tests/: test_bond_orders.py  test_bonding.py  test_crystallization.py  test_dataset_analysis.py  test_phase2.py  test_quantum.py  validate_comprehensive.py
